force-app/main/default/objects/Penalty__c/Penalty__c.object-meta.xml
<CustomObject>
    <label>Penalty</label>
    <nameField>
        <displayFormat>Penalty-{0000}</displayFormat>
        <label>Penalty</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Penalty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>