force-app/main/default/objects/Penalty__c/fields/Balance_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Tax_Amount__c</fullName>
    <label>Balance Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>