force-app/main/default/objects/Penalty__c/fields/Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debit_Amount__c</fullName>
    <label>Debit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>