force-app/main/default/objects/Penalty__c/fields/KYC__c.field-meta.xml
<CustomField>
    <fullName>KYC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KYC</label>
    <referenceTo>KYC__c</referenceTo>
    <relationshipLabel>Penalty</relationshipLabel>
    <relationshipName>Penalty</relationshipName>
    <type>Lookup</type>
</CustomField>